--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.1.0",
     "react-navigation": "^3.3.2",
-    "react-redux": "^6.0.1"
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
