add headerBackTitle styling

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Assets.xcassets/AppIcon.appiconset/1024.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -23,7 +23,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "icon": "./assets/Assets.xcassets/AppIcon.appiconset/1024.png"
+    },
+    "android": {
+      "icon": "./assets/android/mipmap-xxxhdpi/ic_launcher.png"
     }
   }
 }
