--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/1024.png",
+    "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -24,11 +24,9 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "icon": "./assets/1024.png",
       "bundleIdentifier": "com.heatherchristman.BESPTA"
     },
     "android": {
-      "icon": "./assets/1024.png",
       "package": "com.heatherchristman.BESPTA"
     }
   }
